--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -477,7 +477,7 @@ $V_{auto}=\begin{cases}-0.05-0.08\times25-0.105\times3.00+0.00001\times40000=-1.
  
 $V_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times0.85=-4.5025 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times2.00=-7.1 & \text{Segment B} \end{cases}$
  
- $$P_{auto}=\frac{e^{V_{auto}}}{e^{V_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-1.965}}{e^{-1.965}+e^{-4.5025}}=0.9267293=92.67293\% & \text{Segment A} \\\frac{e^{-3.29}}{e^{-3.29}+e^{-7.1}}=0.9783317=97.83317\%& \text{Segment B} \end{cases}$$
+$P_{auto}=\frac{e^{V_{auto}}}{e^{V_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-1.965}}{e^{-1.965}+e^{-4.5025}}=0.9267293=92.67293\% & \text{Segment A} \\\frac{e^{-3.29}}{e^{-3.29}+e^{-7.1}}=0.9783317=97.83317\%& \text{Segment B} \end{cases}$
 ```{r eval=FALSE, include=FALSE}
 -0.05-0.08*25-0.105*3.00+0.00001*40000
 -0.05-0.08*40-0.105*8.00+0.00001*80000
@@ -493,11 +493,11 @@ exp(-3.29)/(exp(-3.29)+exp(-7.1))
 
   i. Reducing the fare by 50 cents in both segments.
 
-$$V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times(0.85-0.50)=-4.1775 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times(2.00-0.50)=-6.775 & \text{Segment B} \end{cases}$$
+$V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}2-0.65\times(0.85-0.50)=-4.1775 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}2-0.65\times(2.00-0.50)=-6.775 & \text{Segment B} \end{cases}$
 
-$$P'_{bus}=\frac{e^{V'_{bus}}}{e^{V_{auto}}+e^{V'_{bus}}}=\begin{cases} \frac{e^{-4.1775}}{e^{-1.965}+e^{-4.1775}}=0.09863359=9.863359\% & \text{Segment A} \\\frac{e^{-6.775}}{e^{-3.29}+e^{-6.775}}=0.02974205=2.974205\%& \text{Segment B} \end{cases}$$
+$P'_{bus}=\frac{e^{V'_{bus}}}{e^{V_{auto}}+e^{V'_{bus}}}=\begin{cases} \frac{e^{-4.1775}}{e^{-1.965}+e^{-4.1775}}=0.09863359=9.863359\% & \text{Segment A} \\\frac{e^{-6.775}}{e^{-3.29}+e^{-6.775}}=0.02974205=2.974205\%& \text{Segment B} \end{cases}$
 
-$$\Delta P_{bus}=P'_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.536289\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=0.807375\% & \text{Segment B} \end{cases}$$
+$\Delta P_{bus}=P'_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.536289\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=0.807375\% & \text{Segment B} \end{cases}$
 
 ```{r eval=FALSE, include=FALSE}
 -0.08*40-0.10*15/2-0.65*(0.85-0.50)
@@ -512,11 +512,11 @@ exp(-6.775)/(exp(-3.29)+exp(-6.775))
  
   ii. Doubling the number of buses on each route (which would halve the headways).
 
-$$V'_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}4-0.65\times0.85=-4.1275 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}4-0.65\times2.00=-6.6 & \text{Segment B} \end{cases}$$
+$V''_{bus}=\begin{cases}-0.08\times40-0.10\times\frac{15}4-0.65\times0.85=-4.1275 & \text{Segment A} \\-0.08\times60-0.10\times\frac{20}4-0.65\times2.00=-6.6 & \text{Segment B} \end{cases}$
 
-$$P'_{bus}=\frac{e^{V'_{bus}}}{e^{V_{auto}}+e^{V'_{bus}}}=\begin{cases} \frac{e^{-4.1275}}{e^{-1.965}+e^{-4.1275}}=0.1031689=10.31689\% & \text{Segment A} \\\frac{e^{-6.6}}{e^{-3.29}+e^{-6.6}}=0.03522972=3.522972\%& \text{Segment B} \end{cases}$$
+$P''_{bus}=\frac{e^{V''_{bus}}}{e^{V_{auto}}+e^{V''_{bus}}}=\begin{cases} \frac{e^{-4.1275}}{e^{-1.965}+e^{-4.1275}}=0.1031689=10.31689\% & \text{Segment A} \\\frac{e^{-6.6}}{e^{-3.29}+e^{-6.6}}=0.03522972=3.522972\%& \text{Segment B} \end{cases}$
 
-$$\Delta P_{bus}=P'_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.98982\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=1.356142\% & \text{Segment B} \end{cases}$$
+$\Delta P_{bus}=P''_{bus}-(1-P_{auto})=\begin{cases} 9.863359\%-(1-92.67293\%)=2.98982\% & \text{Segment A} \\2.974205\%-(1-97.83317\%)=1.356142\% & \text{Segment B} \end{cases}$
 
 ```{r eval=FALSE, include=FALSE}
 -0.08*40-0.10*15/4-0.65*0.85
@@ -532,11 +532,11 @@ exp(-6.6)/(exp(-3.29)+exp(-6.6))
   iii. Increasing parking costs by 50% (i.e. \$3.00 parking cost increases to \$4.50)
 For each population segment, how will each of these strategies affect transit ridership (market share of transit), and which option will be most effective in increasing ridership?
 
-$$V'_{auto}=\begin{cases}-0.05-0.08\times25-0.105\times3.00\times1.5+0.00001\times40000=-2.1225 & \text{Segment A} \\-0.05-0.08\times40-0.105\times8.00\times1.5+0.00001\times80000=-3.71 & \text{Segment B} \end{cases}$$
+$V'_{auto}=\begin{cases}-0.05-0.08\times25-0.105\times3.00\times1.5+0.00001\times40000=-2.1225 & \text{Segment A} \\-0.05-0.08\times40-0.105\times8.00\times1.5+0.00001\times80000=-3.71 & \text{Segment B} \end{cases}$
 
-$$P'_{auto}=\frac{e^{V'_{auto}}}{e^{V'_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-2.1225}}{e^{-2.1225}+e^{-4.5025}}=0.9152894=91.52894\% & \text{Segment A} \\\frac{e^{-3.71}}{e^{-3.71}+e^{-7.1}}=0.9673905=96.73905\%& \text{Segment B} \end{cases}$$
+$P'_{auto}=\frac{e^{V'_{auto}}}{e^{V'_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-2.1225}}{e^{-2.1225}+e^{-4.5025}}=0.9152894=91.52894\% & \text{Segment A} \\\frac{e^{-3.71}}{e^{-3.71}+e^{-7.1}}=0.9673905=96.73905\%& \text{Segment B} \end{cases}$
 
-$$\Delta P_{bus}=-\Delta P_{auto}=P_{auto}-P'_{auto}=\begin{cases} 92.67293\%-91.52894\%=1.14399\% & \text{Segment A} \\97.83317\%-96.73905\%=1.09412\% & \text{Segment B} \end{cases}$$
+$\Delta P_{bus}=-\Delta P_{auto}=P_{auto}-P'_{auto}=\begin{cases} 92.67293\%-91.52894\%=1.14399\% & \text{Segment A} \\97.83317\%-96.73905\%=1.09412\% & \text{Segment B} \end{cases}$
 
 ```{r eval=FALSE, include=FALSE}
 -0.05-0.08*25-0.105*3.00*1.5+0.00001*40000
@@ -547,13 +547,13 @@ exp(-3.71)/(exp(-3.71)+exp(-7.1))
 97.83317-96.73905
 ```
 
-The results show that doubling the number of buses on each route is most effective in increasing ridership for both segments.
+Comparing the three $\Delta P_{bus}$, doubling the number of buses on each route is most effective in increasing ridership for both segments.
 
  ---
  
  c. Describe, using a few sentences, another policy that can be analyzed using this demand model.
 
-According to the model, other possible policies include changing the travel time or changing the purchasing power of transit. Setting bus lanes can decrease the bus travel time. Providing discount bus tickets can decrease the real bus fare while income stay same. Both of the policies can increase the transit share.
+According to the model, other possible policies include changing the travel time or changing the purchasing power of transit. Setting bus lanes can decrease the bus travel time. Providing discount bus tickets can drop the real bus fare while income stays same. Both of the policies can increase the transit share.
  
  ---
  
@@ -576,8 +576,7 @@ Price at the port| 100|100|100|
  a. In a competitive market, what is the land rent at each distance from the port? At what distance is each crop grown? (Specify the bid rent equation for each crop and the distances over which each will be highest. The latter part can be seen most easily by graphing the equations, but the distances should be calculated directly from the equations.)
 
 Let $S$ is the land area for each crop.
-
-$$R_{coffee}S=\frac{S}{0.2}P-\frac{S}{0.2}\cdot8D\implies $$
+$R_{coffee}S=\frac{S}{0.2}P-\frac{S}{0.2}\cdot8D\implies $
 
 $$\begin{cases}R_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2}=500-40D& D\in[0,12.5]\\
 R_{tea}=\frac{100}{0.25}-\frac{5D}{0.25}=400-20D& D\in[0,20]\\
@@ -590,7 +589,7 @@ suppose $R_{coffee}\ge R_{tea}$, then $500-40D\ge 400-20D\implies D\le5$,
 
 suppose $R_{tea}\ge R_{wheat}$, then $400-20D\ge 200-2D\implies D\le11.11111$
 
-Therefore, coffee lands dominate the distance with port from 0 to 5 miles; tea lands dominate the distance with port from  5 to 11.11 miles; wheat lands dominate the distance with port from 11.11 to 100 miles.
+Therefore, coffee lands dominate the distance with the port from 0 to 5 miles; tea lands dominate the distance with the port from  5 to 11.11 miles; wheat lands dominate the distance with the port from 11.11 to 100 miles.
 
 ```{r echo=FALSE, out.width='40%'}
 plot(c(0,25), c(0,500),xlab ="D", ylab ="R",xaxs = "i",yaxs = "i")
@@ -622,11 +621,11 @@ R'_{tea}=\frac{100}{0.25}-\frac{5D}{0.25\times2}=400-10D& D\in[0,40]\\
 R'_{wheat}=\frac{100}{0.5}-\frac{1D}{0.5\times2}=200-D& D\in[0,200]
 \end{cases}$$
 
-For the same distance, it is easy to know the rents will higher than before. By the same way, the coffee lands dominate the distance with port from 0 to 10 miles; tea lands dominate the distance with port from  10 to 22.22 miles; wheat lands dominate the distance with port from 22.22 to 200 miles. We get to know that lower transportation cost results in larger city size.
+For the same distance, it is easy to know the rents will higher than before. By the same way, the coffee lands dominate the distance with the port from 0 to 10 miles; tea lands dominate the distance with the port from 10 to 22.22 miles; wheat lands dominate the distance with the port from 22.22 to 200 miles. We get to know that lower transportation cost results in larger city size.
 
 After subsidy, tea is grown in the land 15 miles from the port, then $MV'=\frac{(400-10\times15)\times100}{0.05}=\$500000$.
 
-Now we know that the subsidy will transfer to the land value. The famers have to pay more rent. Only the land owers can benefit from the subsidy.
+The results show that the subsidy will transfer to the land value. The farmers have to pay more rent. Only the land owners can benefit from the subsidy.
 
  ---
  
@@ -637,10 +636,10 @@ R''_{tea}=\frac{100}{0.25\times2}-\frac{5D}{0.25\times2}=200-10D& D\in[0,20]\\
 R''_{wheat}=\frac{100}{0.5\times2}-\frac{1D}{0.5\times2}=100-D& D\in[0,100]
 \end{cases}$$
 
-We know that $R''=\frac12R$. The proportional change of rent for different land uses results same land use as begining. $MV''=\frac12MV=\$170000$.
+The results show that $R''=\frac12R$, $MV''=\frac12MV=\$170000$. The proportional changes of rent result same land use distribution as the beginning. 
 
  ---
  
  e. Describe the potential impacts on land use if investments were made to the transportation infrastructure (increasing highway lanes) such that transportation costs are lowered.
  
-Basicly, the impacts on land use by transprotation infrastructure is simular with subsidy on transport costs. The difference is these impacts are not even. The lands are closer to highway exits will change the land use to high output industies with higher rent and land value.
+The impacts on land use by transportation infrastructure are similar to that by a subsidy on transport costs. The difference is these impacts are not even. The lands are closer to highway exits will be more like to change the land use to high output industries with higher rent and land value. The new transportation infrastructure changes the time distance for different locations, which will twist the pattern of concentric rings of land use.
