--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -464,7 +464,7 @@ Table 1: Characteristics of work trips for two population segments
 
 ||Segment|A|Segment|B|
 | --- | --- | --- | --- | :--- |
-|Variabel|Auto|Bus|Auto|Bus|
+|Variable|Auto|Bus|Auto|Bus|
 |Auto Travel time(min)|25| - | 40 | - |
 |Parking cost(\$)|3.00| - | 8.00 | - |
 |Bus Travel time(min)| - | 40 | - | 60 |
