--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -486,7 +486,9 @@ $P_{auto}=\frac{e^{V_{auto}}}{e^{V_{auto}}+e^{V_{bus}}}=\begin{cases} \frac{e^{-
 exp(-1.965)/(exp(-1.965)+exp(-4.5025))
 exp(-3.29)/(exp(-3.29)+exp(-7.1))
 ```
- 
+
+The probabilities of choosing auto for a work trip for an individual belonging to segment A is 92.67293%. That of segment B is 97.83317%.
+
  ---
  
  b. In order to increase transit ridership, the local transport authority is considering the following options:
@@ -559,9 +561,9 @@ According to the model, other possible policies include changing the travel time
  
  d. What monetary value of bus travel time, measured in dollars per hour, is implied by the coefficients of this model?
 
-$$VOT =\frac{\Delta V}{\Delta t}\frac{\Delta c}{\Delta V}=\frac{-0.08}{-0.65}=0.1230769$$
+$VOT =\frac{\Delta V}{\Delta t}\frac{\Delta c}{\Delta V}=\frac{-0.08}{-0.65}\times60=7.384615$\$/hour
 
-In this model, bus fare instead of $\frac{cost}{wage}$ measures the systematic utilities per dollar. The monetary value of bus travel time is \$0.1230769 per minute.
+In this model, bus fare instead of $\frac{cost}{wage}$ measures the systematic utilities per dollar. The monetary value of bus travel time is 7.384615 \$/hour.
 
 2. Transportation and Land Use
 
@@ -575,8 +577,7 @@ Price at the port| 100|100|100|
 
  a. In a competitive market, what is the land rent at each distance from the port? At what distance is each crop grown? (Specify the bid rent equation for each crop and the distances over which each will be highest. The latter part can be seen most easily by graphing the equations, but the distances should be calculated directly from the equations.)
 
-Let $S$ is the land area for each crop.
-$R_{coffee}S=\frac{S}{0.2}P-\frac{S}{0.2}\cdot8D\implies $
+Let $S$ is the land area for each crop. $R_{coffee}S=\frac{S}{0.2}P-\frac{S}{0.2}\cdot8D\implies$
 
 $$\begin{cases}R_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2}=500-40D& D\in[0,12.5]\\
 R_{tea}=\frac{100}{0.25}-\frac{5D}{0.25}=400-20D& D\in[0,20]\\
@@ -616,12 +617,12 @@ $MV=\frac{R_{wheat}S}i=\frac{\$17000}{0.05}=\$340000$
  
  c. Return to the assumptions of (a) but assume that the government decides to subsidize 50% of all transport costs. What happens to land rents and the distance each crop is grown? What would you conclude regarding the impact of transportation costs on city size? What is Land Owners' land worth now if the interest rate is 5%? Are the farmers any better off because of the subsidy? Who does benefit from the subsidy?
 
-$$\begin{cases}R'_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2\times2}=500-20D& D\in[0,25]\\
-R'_{tea}=\frac{100}{0.25}-\frac{5D}{0.25\times2}=400-10D& D\in[0,40]\\
-R'_{wheat}=\frac{100}{0.5}-\frac{1D}{0.5\times2}=200-D& D\in[0,200]
+$$\begin{cases}R'_{coffee}=\frac{100}{0.2}-\frac{8D}{0.2\times2}=500-20D'& D'\in[0,25]\\
+R'_{tea}=\frac{100}{0.25}-\frac{5D}{0.25\times2}=400-10D'& D'\in[0,40]\\
+R'_{wheat}=\frac{100}{0.5}-\frac{1D}{0.5\times2}=200-D'& D'\in[0,200]
 \end{cases}$$
 
-For the same distance, it is easy to know the rents will higher than before. By the same way, the coffee lands dominate the distance with the port from 0 to 10 miles; tea lands dominate the distance with the port from 10 to 22.22 miles; wheat lands dominate the distance with the port from 22.22 to 200 miles. We get to know that lower transportation cost results in larger city size.
+For given $D$ is a positive, $R'>R$ , the rents will higher than before. For the same rents, $D'=2D$, the coffee lands dominate the distance with the port from 0 to 10 miles; tea lands dominate the distance with the port from 10 to 22.22 miles; wheat lands dominate the distance with the port from 22.22 to 200 miles. We get to know that lower transportation cost results in larger city size.
 
 After subsidy, tea is grown in the land 15 miles from the port, then $MV'=\frac{(400-10\times15)\times100}{0.05}=\$500000$.
 
@@ -636,10 +637,10 @@ R''_{tea}=\frac{100}{0.25\times2}-\frac{5D}{0.25\times2}=200-10D& D\in[0,20]\\
 R''_{wheat}=\frac{100}{0.5\times2}-\frac{1D}{0.5\times2}=100-D& D\in[0,100]
 \end{cases}$$
 
-The results show that $R''=\frac12R$, $MV''=\frac12MV=\$170000$. The proportional changes of rent result same land use distribution as the beginning. 
+The results show that the proportional changes of rent result same land use distribution as the beginning. Wheat is grown in the land 15 miles from the port, $R''=\frac12R=\$8500$, $MV''=\frac12MV=\$170000$.  
 
  ---
  
  e. Describe the potential impacts on land use if investments were made to the transportation infrastructure (increasing highway lanes) such that transportation costs are lowered.
  
-The impacts on land use by transportation infrastructure are similar to that by a subsidy on transport costs. The difference is these impacts are not even. The lands are closer to highway exits will be more like to change the land use to high output industries with higher rent and land value. The new transportation infrastructure changes the time distance for different locations, which will twist the pattern of concentric rings of land use.
+The impacts on land use by transportation infrastructure are similar to that by a subsidy on transport costs. The difference is these impacts are not even. The lands are closer to highway exits will be more like to change the land use to high output industries with higher rent and land value. The new transportation infrastructure changes the time distance for different locations, which will twist the pattern of concentric rings of land use from the bid-rent model.
